# iriam-point-analyzer

./: .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml
.roo/rules/: python-environment.instructions.md  rules.md  sensitive_data.md
config/: settings.yaml
config/private/: name_data.json.sample
docs/: design_plan.md
src/: app.py  main.py
src/config/: config_loader.py
src/evaluation/: metrics.py
src/ocr/: __init__.py  base.py  constants.py  easyocr_engine.py  image_processing.py  ocr_engine.py  tesseract_engine.py  text_processing.py
src/preprocessing/: image_processor.py  preprocessor.py
src/static/js/: upload.js
src/templates/: upload.html
src/utils/: file_utils.py
tests/: __init__.py  test_ocr.py
tests/data/: expected_data.yaml
