[project]
name = "iriam-point-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "python-levenshtein>=0.27.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
