[project]
name = "iriam-point-analyzer"
version = "0.1.0"
readme = "README.md"
description = "OCRを使用してイリアムポイントを分析するツール"
requires-python = ">=3.10"
dependencies = [
    "pytesseract",
    "fuzzywuzzy[speedup]",
    "pillow",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "pytesseract.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fuzzywuzzy.*"
ignore_missing_imports = true
